# Photo

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CanonPS_SX150_IS.txt  Makefile  camera.cpp  camera.h  chdkptpmanager.cpp  chdkptpmanager.h  cmake_install.cmake  luaapi.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_camera.cpp  moc_chdkptpmanager.cpp  moc_mainwindow.cpp  moc_parameterslider.cpp  photobooth  photobooth.cpp  photobooth.h  photobooth.kdev4  photobooth.qrc  photobooth_automoc.cpp  qrc_photobooth.cpp  tasks.txt  ui_mainwindow.h  ui_parameterslider.h  usefull_commands.txt
1/extra/chdkptp/: Makefile  chdkptp  howto.txt
1/extra/chdkptp/lua/: multicam.lua
Canon/: CanonA1400  CanonPS SX150 IS
QtCreator/CameraCommunication/: CameraCommunication  CameraCommunication.pro  Makefile  cameracommunication_utils.cpp  cameracommunication_utils.h  chdhkptp_header.h  clean.sh  common.h  devicemanager.cpp  devicemanager.h  luatableparser.cpp  luatableparser.h  main.cpp  remoteinode.h  scriptloader.cpp  scriptloader.h
QtCreator/CameraCommunication/chdkptp/: lbuf.c  liveimg.c  ptpcam.h
QtCreator/CameraCommunication/chdkptp/lfs/: Makefile
QtCreator/CameraCommunication/chdkptp/lua/: multicam.lua
QtCreator/CameraCommunication/commands/: delete_photos.script  listdir.script  multicam_start.script  rec.script  shoot.script
QtCreator/Console_PhotoB/: Console_PhotoB.pro  Makefile  main.cpp
QtCreator/PhotoB/: .directory  Makefile  PhotoB  PhotoB.pro  PhotoB.pro.user.d169fa9  camera.cpp  camera.h  canonPS_SX150_IS.txt  chdkptpmanager.cpp  chdkptpmanager.h  commandmanager.cpp  commandmanager.h  commands.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  moc_camera.cpp  moc_chdkptpmanager.cpp  moc_mainwindow.cpp  moc_parameterslider.cpp  parameterslider.cpp  parameterslider.h  parameterslider.ui  photobooth.qrc  properties.h  propertyresolver.cpp  propertyresolver.h  qrc_photobooth.cpp  testedwindow.ui  ui_mainwindow.h  ui_parameterslider.h  ui_testedwindow.h  utils.cpp  utils.h
QtCreator/PhotoB/communication/: chdhkptp_header.h  devicemanager.cpp  devicemanager.h  scriptloader.h  stuff.cpp  test.cpp
QtCreator/PhotoB/communication/chdkptp/: Makefile  chdkptp.c  ptp.h  ptpcam.h  rawimg.c  run.sh
QtCreator/PhotoB/communication/commands/: multicam_start.script  play.script
headers/: chdkptpmanager.h
libs/chdkptp/: .directory  Makefile  Makefile~  chdkptp
libs/chdkptp/.dep/: chdkptp.d  lbuf.d  liveimg.d  luautil.d  properties.d  ptp.d  rawimg.d
libs/chdkptp/lfs/: Makefile  Makefile~  lfs.c~
libs/chdkptp/lua/: multicam.lua
libs/lua-intf/LuaIntf/impl/: LuaException.h
lua_study/: classes.lua  mymodule.lua
lua_study/C++/1/First/: CMakeLists.txt  First.kdev4  main.cpp
old/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.cpp  chdkptpmanager.cpp  cmake_install.cmake  moc_camera.cpp  moc_parameterslider.cpp  parameterslider.cpp  parameterslider.h  photobooth  qrc_photobooth.cpp  ui_mainwindow.h  ui_parameterslider.h
src/ui/: mainwindow.ui
stuff/: APEX96 values.ods  chdkluaref.ps  kap_uav.lua  usb_ctrl.lua
(+2 files in other folders)
